--- a/src/renderer/css/pdf.css
+++ b/src/renderer/css/pdf.css
@@ -1,5 +1,7 @@
 :root {
   --toolbar-height: 44px;
+  --sidebar-width: 300px;
+  --statusbar-height: 20px;
   --toolbar-bg-color: #444;
   --toolbar-fg-color: #eee;
 }
@@ -11,49 +13,58 @@
   }
 }
 
-.Toolbar {
+#Sidebar {
+  position: fixed;
+  top: var(--toolbar-height);
+  left: 0;
+  bottom: 0;
+  width: var(--sidebar-width);
+  background-color: #eee;
+  overflow-y: auto;
+  overflow-x: hidden;
+  z-index: 1;
+}
+
+#Statusbar {
+  position: fixed;
+  bottom: 0;
+  left: var(--sidebar-width);
+  right: 0;
+  height: var(--statusbar-height);
+  background-color: #444;
+  color: #eee;
+  font-size: 12px;
+  line-height: 24px;
+  padding: 0 8px;
+  z-index: 1;
+}
+
+#Toolbar {
   position: fixed;
   top: 0;
   right: 0;
   left: 0;
   height: var(--toolbar-height);
-  z-index: 10;
   background-color: var(--toolbar-bg-color);
   color: var(--toolbar-fg-color);
   border-bottom: 1px solid var(--toolbar-fg-color);
   box-shadow: 0 0 4px 4px rgba(0, 0, 0, 0.2);
+  z-index: 1;
 }
 
-.Toolbar > .ZoomIn,
-.Toolbar > .ZoomOut {
-  border: 1px solid #888;
-  border-radius: 5px;
-  background-color: #fe8;
-  width: 32px;
-  height: 24px;
-  font-size: 12px;
-  font-weight: bold;
-  color: black;
-  margin: 2px;
-}
-
-.Toolbar > .ZoomPercent {
-  text-align: center;
-  font-size: 16px;
-  color: white;
-  margin: 2px;
-}
-
-.Viewer {
-  padding-top: calc(var(--toolbar-height) + 4px);
+#Viewer {
   background-color: #444;
-  width: 100%;
-  height: calc(100% - var(--toolbar-height) - 4px);
-  position: absolute;
-  overflow: hidden;
+  position: fixed;
+  top: var(--toolbar-height);
+  bottom: var(--statusbar-height);
+  left: var(--sidebar-width);
+  right: 0;
+  max-width: 100%;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
-.pdfViewer {
+#pdfViewer {
   --gap-size: 10px;
   display: flex;
   flex-wrap: wrap;
@@ -62,16 +73,15 @@
   align-content: flex-start;
   gap: var(--gap-size);
   padding: var(--gap-size);
-  max-width: 100%;
-  height: 100%;
-  overflow: scroll;
   background-color: grey;
 }
 
-.pdfViewer .page {
+#pdfViewer .page {
   margin: 0 0 0 0;
   padding: 0 0 0 0;
   border-image: none;
   border: none;
   box-shadow: 0 0 6px 0 black;
+  display: block;
+  position: relative;
 }
