--- a/src/renderer/css/pdf-sidebar.css
+++ b/src/renderer/css/pdf-sidebar.css
@@ -7,6 +7,7 @@
   font-size: small;
   white-space: nowrap;
   text-overflow: ellipsis;
+  position: relative;
 }
 
 #Sidebar .outline-node-title-indent {
@@ -21,8 +22,29 @@
   white-space: nowrap;
 }
 
+#Sidebar .outline-node-title .outline-node-page-number {
+  display: none;
+}
+
 #Sidebar .outline-node-title:hover {
   background-color: #ddd;
+}
+
+#Sidebar .outline-node-title:hover .outline-node-page-number {
+  /* popunder page number when hovered*/
+  display: block;
+  position: absolute;
+  top: 1em;
+  right: 0;
+  font-size: small;
+  font-weight: bold;
+  color: #000;
+  background-color: #fff;
+  border: 1px solid #000;
+  border-radius: 3px;
+  padding: 0.2em 0.4em;
+  z-index: 1;
+  opacity: 0.9;
 }
 
 #Sidebar .outline-node-title.current-path {
@@ -31,4 +53,6 @@
 
 #Sidebar .outline-node .outline-subnodes {
   margin-left: var(--outline-indent);
+  right: 0;
+  position: relative;
 }
