--- a/src/renderer/css/pdf.scss
+++ b/src/renderer/css/pdf.scss
@@ -90,35 +90,35 @@
   gap: var(--gap-size);
   padding: var(--gap-size);
   background-color: grey;
-}
 
-#pdfViewer .page {
-  margin: 0 0 0 0;
-  border-image: none;
-  border: none;
-  box-shadow: 0 0 6px 0 black;
-  display: block;
-  position: relative;
-}
+  .page {
+    margin: 0 0 0 0; /*hi */
+    border-image: none;
+    border: none;
+    box-shadow: 0 0 6px 0 black;
+    display: block;
+    position: relative;
 
-#pdfViewer .page .unsaved-annotation {
-  position: absolute;
-  content: "";
-}
+    .unsaved-annotation {
+      position: absolute;
+      content: "";
+    }
 
-#pdfViewer .page .textLayer {
-  opacity: 1;
-}
+    .textLayer {
+      opacity: 1;
+    }
 
-#pdfViewer .page .textLayer::selection,
-#pdfViewer .page .textLayer span::selection {
-  background: var(--highlight-color);
-  background-color: var(--highlight-color);
-  text-decoration: var(--highlight-text-decoration);
-  border: 1px solid black;
-  opacity: var(--highlight-opacity);
-}
+    .textLayer ::selection, /* needed to overload Mozilla's defaults*/
+    .textLayer span::selection {
+      background: var(--highlight-color);
+      background-color: var(--highlight-color);
+      text-decoration: var(--highlight-text-decoration);
+      border: 1px solid black;
+      opacity: var(--highlight-opacity);
+    }
+  }
 
-#pdfViewer section.highlightAnnotation {
-  pointer-events: none;
+  section.highlightAnnotation {
+    pointer-events: none;
+  }
 }
