--- a/src/renderer/css/pdf-sidebar.scss
+++ b/src/renderer/css/pdf-sidebar.scss
@@ -1,58 +1,57 @@
 #Sidebar {
   --outline-indent: 10px;
-}
 
-#Sidebar .outline-node {
-  font-family: sans-serif;
-  font-size: small;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  position: relative;
-}
+  .outline-node {
+    font-family: sans-serif;
+    font-size: small;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    position: relative;
+  }
 
-#Sidebar .outline-node-title-indent {
-  width: var(--outline-indent);
-  content: " ";
-  display: inline-block;
-}
+  .outline-node-title-indent {
+    width: var(--outline-indent);
+    content: " ";
+    display: inline-block;
+  }
 
-#Sidebar .outline-node-title {
-  cursor: pointer;
-  display: inline-block;
-  white-space: nowrap;
-}
+  .outline-node-title {
+    cursor: pointer;
+    display: inline-block;
+    white-space: nowrap;
+    width: -webkit-fill-available;
+    .outline-node-page-number {
+      display: none;
+    }
 
-#Sidebar .outline-node-title .outline-node-page-number {
-  display: none;
-}
+    &:hover {
+      background-color: #ddd;
 
-#Sidebar .outline-node-title:hover {
-  background-color: #ddd;
-}
+      .outline-node-page-number {
+        /* popunder page number when hovered*/
+        display: block;
+        position: absolute;
+        top: 1em;
+        right: 0;
+        font-size: small;
+        font-weight: bold;
+        color: #000;
+        background-color: #fff;
+        border: 1px solid #000;
+        border-radius: 3px;
+        padding: 0.2em 0.4em;
+        z-index: 1;
+        opacity: 0.9;
+      }
+    }
+  }
+  .outline-node-title.current-path {
+    font-weight: bold;
+  }
 
-#Sidebar .outline-node-title:hover .outline-node-page-number {
-  /* popunder page number when hovered*/
-  display: block;
-  position: absolute;
-  top: 1em;
-  right: 0;
-  font-size: small;
-  font-weight: bold;
-  color: #000;
-  background-color: #fff;
-  border: 1px solid #000;
-  border-radius: 3px;
-  padding: 0.2em 0.4em;
-  z-index: 1;
-  opacity: 0.9;
-}
-
-#Sidebar .outline-node-title.current-path {
-  font-weight: bold;
-}
-
-#Sidebar .outline-node .outline-subnodes {
-  margin-left: var(--outline-indent);
-  right: 0;
-  position: relative;
+  .outline-node .outline-subnodes {
+    margin-left: var(--outline-indent);
+    right: 0;
+    position: relative;
+  }
 }
