--- a/src/renderer/css/pdf.scss
+++ b/src/renderer/css/pdf.scss
@@ -77,6 +77,14 @@
 }
 
 #Viewer {
+  &.show-text-layer {
+    .textLayer span,
+    .textLayer br {
+      background-color: white;
+      color: black;
+      opacity: 0.7;
+    }
+  }
   .textLayer > span {
     color: default;
   }
