--- a/src/renderer/css/pdf.scss
+++ b/src/renderer/css/pdf.scss
@@ -106,10 +106,14 @@
       box-shadow: 0 0 6px 0 black;
       display: block;
       position: relative;
+      background: white;
 
       .unsaved-annotation {
         position: absolute;
         content: "";
+      }
+
+      .canvasWrapper {
       }
 
       .textLayer {
@@ -117,12 +121,33 @@
       }
 
       .textLayer ::selection, /* needed to overload Mozilla's defaults*/
-    .textLayer span::selection {
+      .textLayer span::selection {
         background: var(--highlight-color);
         background-color: var(--highlight-color);
         text-decoration: var(--highlight-text-decoration);
         border: 1px solid black;
         opacity: var(--highlight-opacity);
+      }
+      .annotationLayer {
+        display: none;
+      }
+      .highlight-layer {
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        border: 1px solid red;
+        display: hidden;
+        .highlight-annotation {
+          position: absolute;
+          opacity: 50%;
+          background-color: rgb(255, 255, 209);
+          &:hover {
+            border-width: 1px;
+            border-color: rgba(0, 0, 0, 0.2);
+          }
+        }
       }
     }
 
