--- a/src/renderer/css/pdf.scss
+++ b/src/renderer/css/pdf.scss
@@ -106,7 +106,7 @@
       box-shadow: 0 0 6px 0 black;
       display: block;
       position: relative;
-      background: white;
+      background: rgba(255, 255, 255, 0.5);
 
       .unsaved-annotation {
         position: absolute;
