--- a/src/renderer/css/pdf.scss
+++ b/src/renderer/css/pdf.scss
@@ -1,6 +1,7 @@
 :root {
   --toolbar-bg-color: #444;
   --toolbar-fg-color: #eee;
+  --resize-grip-width: 4px;
 }
 
 @media (prefers-color-scheme: light) {
@@ -10,153 +11,14 @@
   }
 }
 
-#Sidebar {
-  position: fixed;
-  top: var(--toolbar-height);
-  left: 0;
-  bottom: 0;
-  width: var(--sidebar-width);
-  background-color: #eee;
-  overflow-y: auto;
-  overflow-x: hidden;
-  z-index: 1;
-}
+@import "./pdf/sidebar.scss";
+@import "./pdf/statusbar.scss";
+@import "./pdf/annotationbar.scss";
+@import "./pdf/toolbar.scss";
+@import "./pdf/viewer.scss";
 
-#Statusbar {
-  position: fixed;
-  bottom: 0;
-  left: var(--sidebar-width);
-  right: 0;
-  height: var(--statusbar-height);
-  background-color: #444;
-  color: #eee;
-  font-size: 12px;
-  line-height: 24px;
-  padding: 0 8px;
-  z-index: 1;
-}
-
-#Toolbar {
-  position: fixed;
-  top: 0;
-  right: 0;
-  left: 0;
-  height: var(--toolbar-height);
-  background-color: var(--toolbar-bg-color);
-  color: var(--toolbar-fg-color);
-  border-bottom: 1px solid var(--toolbar-fg-color);
-  box-shadow: 0 0 4px 4px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-}
-
-#Viewer {
-  background-color: #444;
-  position: fixed;
-  top: var(--toolbar-height);
-  bottom: var(--statusbar-height);
-  left: var(--sidebar-width);
-  right: 0;
-  max-width: 100%;
-  overflow-y: scroll;
-  overflow-x: hidden;
-}
-
-#Annotationbar {
-  position: fixed;
-  right: 0;
-  bottom: var(--statusbar-height);
-  top: var(--toolbar-height);
-  max-width: var(--annotationbar-width);
-  overflow: hidden;
-  background-color: #444;
-  color: #eee;
-  font-size: 12px;
-  line-height: 24px;
-  padding: 0 8px;
-  z-index: 1;
-}
-
-#Viewer {
-  &.show-text-layer {
-    .textLayer span,
-    .textLayer br {
-      background-color: white;
-      color: black;
-      opacity: 0.7;
-    }
-  }
-  .textLayer > span {
-    color: default;
-  }
-  #pdfViewer {
-    --gap-size: 10px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    align-items: center;
-    align-content: flex-start;
-    gap: var(--gap-size);
-    padding: var(--gap-size);
-    background-color: grey;
-
-    .page {
-      margin: 0 0 0 0; /*hi */
-      border-image: none;
-      border: none;
-      box-shadow: 0 0 6px 0 black;
-      display: block;
-      position: relative;
-      background: rgba(255, 255, 255, 0.5);
-      background-color: white;
-      .unsaved-annotation {
-        position: absolute;
-        content: "";
-      }
-
-      .canvasWrapper {
-      }
-
-      .textLayer {
-        opacity: 1;
-        // span {
-        //   color: black;
-        //   background: white;
-        // }
-      }
-
-      .textLayer ::selection, /* needed to overload Mozilla's defaults*/
-      .textLayer span::selection {
-        background: var(--highlight-color);
-        background-color: var(--highlight-color);
-        text-decoration: var(--highlight-text-decoration);
-        border: 1px solid black;
-        opacity: var(--highlight-opacity);
-      }
-      .annotationLayer {
-        display: none;
-      }
-      .highlight-layer {
-        position: absolute;
-        top: 0;
-        left: 0;
-        bottom: 0;
-        right: 0;
-        border: 1px solid red;
-        // display: none;
-        .highlight-annotation {
-          position: absolute;
-          opacity: 50%;
-          background-color: rgb(255, 255, 209);
-          &:hover {
-            border-width: 1px;
-            border-color: rgba(0, 0, 0, 0.2);
-          }
-        }
-      }
-    }
-
-    section.highlightAnnotation {
-      pointer-events: none;
-    }
-  }
+.resize-grip {
+  border: 1px solid red;
+  background-color: #ccc;
+  position: absolute;
 }
