--- a/src/renderer/css/pdf/statusbar.scss
+++ b/src/renderer/css/pdf/statusbar.scss
@@ -10,6 +10,14 @@
   line-height: 24px;
   padding: 0 8px;
   z-index: 1;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: nowrap;
+  #Statusbar-right {
+    display: flex;
+    justify-content: end;
+    align-items: center;
+  }
   .resize-grip {
     height: var(--resize-grip-width);
     top: 0;
