--- a/src/renderer/css/pdf/sidebar.scss
+++ b/src/renderer/css/pdf/sidebar.scss
@@ -1,4 +1,5 @@
 #Sidebar {
+  --outline-indent: 10px;
   position: fixed;
   top: var(--toolbar-height);
   left: 0;
@@ -14,5 +15,68 @@
     bottom: 0;
     right: 0;
     cursor: ew-resize;
+  }
+
+  .outline-node {
+    font-family: sans-serif;
+    font-size: small;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    position: relative;
+    .later-than-visible-start.earlier-than-visible-end {
+      background: #ccc;
+    }
+  }
+
+  .dragOver {
+    background-color: #ddd;
+    border-color: 1px solid purple;
+    margin: -1px;
+  }
+
+  .outline-node-title-indent {
+    width: var(--outline-indent);
+    content: " ";
+    display: inline-block;
+  }
+
+  .outline-node-title {
+    cursor: pointer;
+    display: inline-block;
+    white-space: nowrap;
+    width: -webkit-fill-available;
+    .outline-node-page-number {
+      display: none;
+    }
+
+    &:hover {
+      background-color: #ddd;
+
+      .outline-node-page-number {
+        /* popunder page number when hovered*/
+        display: block;
+        position: absolute;
+        top: 1em;
+        right: 0;
+        font-size: small;
+        font-weight: bold;
+        color: #000;
+        background-color: #fff;
+        border: 1px solid #000;
+        border-radius: 3px;
+        padding: 0.2em 0.4em;
+        z-index: 1;
+        opacity: 0.9;
+      }
+    }
+  }
+  .outline-node-title.current-path {
+    font-weight: bold;
+  }
+
+  .outline-node .outline-subnodes {
+    margin-left: var(--outline-indent);
+    right: 0;
+    position: relative;
   }
 }
