--- a/src/renderer/css/pdf/viewer.scss
+++ b/src/renderer/css/pdf/viewer.scss
@@ -68,13 +68,13 @@
     --gap-size: 2px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: top;
     align-content: flex-start;
     gap: var(--gap-size);
     padding: var(--gap-size);
     background-color: grey;
-
+    margin-bottom: 50%;
     .page {
       margin: 0 0 0 0; /*hi */
       border-image: none;
