refactoring events, because otherwise outlines are going to turn to spaghetti.

--- a/src/renderer/css/browser.scss
+++ b/src/renderer/css/browser.scss
@@ -52,7 +52,7 @@
 
 @keyframes expand-in {
   0% {
-    height: 0px;
+    height: default; /*0px;*/
     background: grey;
     overflow-y: hidden;
   }
