fix black underline preview.

--- a/src/renderer/css/pdf/toolbar.scss
+++ b/src/renderer/css/pdf/toolbar.scss
@@ -73,9 +73,11 @@
         input {
           border: 1px solid black;
           background: #666;
-          color: black;
+          color: #eee;
           height: 1.5em;
           text-align: right;
+          padding-left: 0.6em;
+          padding-right: 0.6em;
         }
       }
     }
