ountline started. resize fixes.

--- a/src/renderer/css/pdf/annotationbar.scss
+++ b/src/renderer/css/pdf/annotationbar.scss
@@ -3,7 +3,7 @@
   right: 0;
   bottom: var(--statusbar-height);
   top: var(--toolbar-height);
-  max-width: var(--annotationbar-width);
+  width: var(--annotationbar-width);
   overflow: hidden;
   background-color: #444;
   color: #eee;
